# ComfyUI_DiffuEraser

./: 20250206workflow.json  README.md  __init__.py  diffueraser_node.py  node_utils.py  pyproject.toml  requirements.txt  run_diffueraser.py
example_workflows/: differaser.json
libs/: brushnet_CA.py  diffueraser.py  pipeline_diffueraser.py  unet_3d_blocks.py  unet_motion_model.py
propainter/: inference.py
propainter/RAFT/: __init__.py
propainter/core/: dataset.py  loss.py  metrics.py  trainer.py  trainer_flow_w_edge.py
propainter/model/: misc.py  propainter.py  recurrent_flow_completion.py
propainter/model/modules/: flow_comp_raft.py
