[project]
name = "comfyui_diffueraser"
description = "DiffuEraser is a diffusion model for video Inpainting, you can use it in ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["torch", "torchvision", "torchaudio", "diffusers", "accelerate", "opencv-python", "imageio", "#matplotlib", "transformers", "einops", "#datasets", "#numpy==1.26.4", "#pillow==10.4.0", "#tqdm==4.66.4", "#urllib3==2.2.2", "#zipp==3.19.2", "peft", "#scipy==1.13.1", "#av==14.0.1"]

[project.urls]
Repository = "https://gh.api.99988866.xyz/https://github.com/smthemex/ComfyUI_DiffuEraser"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_DiffuEraser"
Icon = ""
